# Michaels-retirement-travel-planner

./: README.md  main.py  pyproject.toml  travel_report_20260131_213927.json  travel_report_20260131_213927.txt
tools/: __init__.py  air_quality.py  geocode.py  places.py  weather.py
